--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,12 @@ jobs:
 
       - run: composer install -n --prefer-dist
       - run: php artisan key:generate
+
+      # prepare the database
+      - run: touch storage/testing.sqlite
+      - run: php artisan migrate --force
+
+      #Run npm install
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
@@ -60,12 +66,3 @@ jobs:
           key: node-v1-{{ checksum "package.json" }}
           paths:
             - node_modules
-
-      # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --force
-
-      # run tests with phpunit or codecept
-      #- run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
